[gd_scene load_steps=8 format=3 uid="uid://g7trfgkrt2u7"]

[ext_resource type="Texture2D" uid="uid://d32qnhr7848oj" path="res://Menus/Interface windows.png" id="1_1mhvi"]
[ext_resource type="Script" uid="uid://bg73va6rn1ga8" path="res://scenes/OnlineMode.gd" id="1_66s2c"]
[ext_resource type="FontFile" uid="uid://b33kuu0osw1kp" path="res://fonts/CyberpunkCraftpixPixel.otf" id="2_bwv1h"]
[ext_resource type="Theme" uid="uid://dly54hmbgdvr7" path="res://Themes/OptionsButton.tres" id="3_jxe22"]
[ext_resource type="Theme" uid="uid://4oc4y8tfb6ds" path="res://Themes/PauseButton.tres" id="4_jxe22"]
[ext_resource type="Texture2D" uid="uid://tslrtc7kyasm" path="res://buttons/close_icon.png" id="5_66s2c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_66s2c"]
texture = ExtResource("1_1mhvi")
region_rect = Rect2(1339, 734, 241, 227)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_66s2c")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -254.375
offset_right = 264.0
offset_bottom = 254.375
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_66s2c")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 70

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_bwv1h")
theme_override_font_sizes/font_size = 45
text = "Online Game"

[node name="JoinButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_jxe22")
theme_override_font_sizes/font_size = 30
text = "Join Game
"

[node name="HostButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme = ExtResource("3_jxe22")
theme_override_font_sizes/font_size = 30
text = "Host Game"

[node name="Exit Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1133.0
offset_top = 328.0
offset_right = 1183.0
offset_bottom = 378.0
theme = ExtResource("4_jxe22")
icon = ExtResource("5_66s2c")
icon_alignment = 1

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Exit Button" to="." method="_on_exit_button_pressed"]
